# Zygos

./: .env.example  .gitignore  ARCHITECTURE.md  COMPATIBILITY.md  CONSTITUTION.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  ROADMAP.md  STYLE_GUIDE.md  TECHNICAL_OVERVIEW.md  VISION.md  ZYGOS_V2_IMPLEMENTATION.md  ZYGOS_VISION.md  package-lock.json  package.json  tsconfig.json
backend/: pyproject.toml
backend/tests/: test_architecture.py  test_errors.py  test_smoke.py
backend/tests/agent/: test_config.py  test_loop.py  test_schema.py
backend/tests/api/: test_app_cycle2.py  test_app_lifecycle.py  test_app_tools.py  test_audio.py  test_duck.py  test_duck_ws.py  test_frames.py  test_health.py  test_permission_resolver.py  test_routes_runtime.py  test_routes_sessions.py  test_session.py  test_speech.py  test_tools_live.py  test_trace.py  test_tts_ws.py  test_turn.py  test_turn_tools.py  test_voice_gate.py  test_voice_ws.py  test_websocket.py
backend/tests/cli/: test_doctor.py  test_inspect.py  test_serve.py
backend/tests/config/: test_credentials.py  test_env.py  test_loader.py  test_schema.py  test_voice_config.py
backend/tests/eval/: test_cli.py  test_codeexec.py  test_report.py  test_runner.py  test_scorers.py  test_seed_suite.py  test_suite.py  test_types.py
backend/tests/live/: test_ollama_live.py  test_tools_live.py
backend/tests/memory/: test_c2_acceptance.py  test_consolidate.py  test_durability_resume.py  test_embed_backlog.py  test_extract.py  test_fusion.py  test_indexes.py  test_relevance.py  (+7 more)
backend/zygos/: __init__.py  errors.py
(+330 files in other folders)
