[project]
name = "zygos"
version = "2.0.0a0"
description = "Zygos AI runtime (v2, Python)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["zygos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
